# Omo-Koda2

./: .gitignore  3 body problem  Audit phase  Birth Certificate  Cargo.toml  PHASE_1.md  PHASE_2.md  Power of Zero  README.md  Read file  TODO.md  omokoda-complete-architecture.md  simulation_report.json  ỌṢÓ & Ọ̀ṢỌ́
omokoda-core/: Cargo.toml
omokoda-core/benches/: benchmark.rs
omokoda-core/src/: interpreter.rs  justice.rs  lib.rs  memory.rs  parser.rs  providers.rs  receipt.rs  reputation.rs  session.rs  tools.rs
omokoda-core/src/execution/: hooks.rs  mod.rs  no_resume.rs  permission_enforcer.rs
omokoda-core/src/identity/: bipon39.rs  dna.rs  mod.rs  odu.rs  pet.rs
omokoda-core/src/justice/: mod.rs
omokoda-core/src/providers/: streaming.rs
omokoda-core/src/receipt/: act_receipt.rs  mod.rs
omokoda-core/src/tools/: mod.rs  sovereign.rs
omokoda-core/tests/: e2e_tests.rs  identity_tests.rs  integration_tests.rs  interpreter_tests.rs  justice_tests.rs  parser_tests.rs  persistence_tests.rs  pet_tests.rs  privacy_memory_tests.rs  privacy_tests.rs  provider_tests.rs  rack_tests.rs  receipt_tests.rs  sandbox_tests.rs  session_tests.rs  slash_command_tests.rs  steward_audit_tests.rs  tool_registry_tests.rs
omokoda-frontend/: README.md  package.json
omokoda-hermetic/: Cargo.toml
omokoda-on-chain/: Move.toml
omokoda-ops/: go.mod  health.go  main.go  main_test.go  metrics.go  monitor.go  simulation_report.json
omokoda-simulation/: simulation.py  simulation_report.json
omokoda-sui/: Move.toml  README.md
omokoda-swarm/: .gitignore  README.md  mix.exs
(+34 files in other folders)
