[package]
name = "omokoda-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.8"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
wasm-bindgen = "0.2"
